Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2164

mkfs.lustre segfaults when given improper options

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • None
    • None
    • 3
    • 2998

      After setting up a zpool, attempted to mkfs, with a thinko in the command:
      Bad command:
      mkfs.lustre --reformat --mgs --fsname lustre --backfstype=zfs mirror lustre-meta/mgs

      Correct command:
      mkfs.lustre --reformat --mgs --fsname lustre --backfstype=zfs lustre-meta/mgs

      Result:
      Segmentation fault (core dumped)

            bzzz Alex Zhuravlev
            cliffw Cliff White (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: